--- a/angularSeo/src/app/components/change-password/change-password.component.html
+++ b/angularSeo/src/app/components/change-password/change-password.component.html
@@ -20,7 +20,7 @@
             <span class="input-group-addon">
               <i class="fa fa-envelope" aria-hidden="true"></i>
             </span>
-            <input type="password" class="form-control" [(ngModel)]="password" required minlength="4" name="pass" placeholder="enter new password">
+            <input type="password" [readonly]='loading' class="form-control" [(ngModel)]="password" required minlength="4" name="pass" placeholder="enter new password">
           </div>
 
           <br/>
@@ -29,9 +29,6 @@
 
           <br/>
 
-          <div *ngIf="loading" class="text-center" style="z-index: 9999">
-            <img class="rolling" src="/assets/images/Rolling.gif">
-          </div>
           <div class="align-center">
             <button type="submit" class="btn submit-btn">Next</button>
           </div>
