--- a/angularSeo/src/app/components/forgot-password/forgot-password.component.html
+++ b/angularSeo/src/app/components/forgot-password/forgot-password.component.html
@@ -20,15 +20,13 @@
             <span class="input-group-addon">
               <i class="fa fa-envelope" aria-hidden="true"></i>
             </span>
-            <input type="text" class="form-control" [(ngModel)]="email" required minlength="4" name="em" placeholder="you@yourmail.com">
+            <input type="text" [readonly]='isLoading' class="form-control" [(ngModel)]="email" required minlength="4" name="em" placeholder="you@yourmail.com">
           </div>
 
           <br/>
 
 
-          <div *ngIf="isLoading" class="text-center" style="z-index: 9999">
-            <img class="rolling" src="/assets/images/Rolling.gif">
-          </div>
+
           <div class="align-center">
             <button type="submit" class="btn submit-btn">Next</button>
           </div>
