--- a/angularSeo/src/app/components/rate/rate.component.html
+++ b/angularSeo/src/app/components/rate/rate.component.html
@@ -5,13 +5,13 @@
   <div *ngIf="!submitted" class="alert alert-danger">
     {{message}}
   </div>
-<app-star-form (ratingClick)="ratingComponentClick($event)">
+<app-star-form  (ratingClick)="ratingComponentClick($event)">
 
 </app-star-form>
 <form>
     <div class="form-group">
         
-        <textarea class="form-control" [(ngModel)]='commentText' name="commentT" id="Textarea" rows="3" placeholder="Leave a comment" cols="50"></textarea>
+        <textarea class="form-control"  [readonly]='isLoading' [(ngModel)]='commentText' name="commentT" id="Textarea" rows="3" placeholder="Leave a comment" cols="50"></textarea>
       </div>
 <button (click)='submitComment()' class="btn btn-primary">Send</button>
 
