--- a/angularSeo/src/app/components/service/service.component.html
+++ b/angularSeo/src/app/components/service/service.component.html
@@ -7,7 +7,7 @@
   <div class="row">
 
     <div class="col-sm-6">
-      <h3>Academic</h3>
+      <h3>Academic c</h3>
       <div *ngFor="let sub of subjects">
         <h5>{{sub}}</h5>
       </div>
